<resources>
    <string name="app_name">cetup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="view_all">View All</string>
    <string name="result">10+</string>
    <string name="menu">Menu</string>
    <string name="image">image</string>
    <string name="background">background</string>
    <string name="name">Name</string>
    <string name="message">This is message for her or him</string>
    <string name="time">2 min ago</string>
    <string name="calls">Calls</string>
    <string name="setting">Setting</string>
    <string name="cetup">CetUp</string>
    <string name="call">Call</string>
</resources>