<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".CallGroupsFragment">

    <ImageView
        android:id="@+id/iv_menu"
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_15dp"
        android:src="@drawable/ic_baseline_clear_all_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu" />

    <TextView
        android:id="@+id/tv_calls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_70dp"
        android:text="@string/calls"
        android:textColor="#2D303E"
        android:textSize="@dimen/_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_menu"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toEndOf="@+id/iv_menu"
        app:layout_constraintTop_toTopOf="@+id/iv_menu"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/tv_groups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_70dp"
        android:text="@string/groups"
        android:textColor="#2D303E"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_calls"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toEndOf="@+id/iv_menu"
        app:layout_constraintTop_toTopOf="@+id/tv_calls" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:background="@drawable/circle_search"
        android:drawableTop="@drawable/search_icon"
        android:paddingTop="@dimen/_7dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_groups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_groups" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_call"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="@+id/iv_menu"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>